--- a/Cassandra_using_Python_basic.ipynb
+++ b/Cassandra_using_Python_basic.ipynb
@@ -134,7 +134,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import Cassandar module\n",
+    "# First install Cassandra Python Driver i.e !pip install cassandra-driver then Import Cassandar module\n",
     "from cassandra.cluster import Cluster"
    ]
   },
