--- a/Cassandra_get_data.ipynb
+++ b/Cassandra_get_data.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "cluster = Cluster(['138.68.253.133'])"
+    "cluster = Cluster(['XXX.XXX.XXX.XXX'])"
    ]
   },
   {
