--- a/Cassandra_get_data.ipynb
+++ b/Cassandra_get_data.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "cluster = Cluster(['XXX.XXX.XXX.XXX'])"
+    "cluster = Cluster(['Server_IP_Address'])"
    ]
   },
   {
@@ -42,7 +42,7 @@
    },
    "outputs": [],
    "source": [
-    "auth_provider = PlainTextAuthProvider(username=cassandra, password=cassandra)\n",
+    "auth_provider = PlainTextAuthProvider(username=xxxx, password=xxxxx)\n",
     "cluster = Cluster(contact_points=[CASSANDRA_HOST], port=CASSANDRA_PORT,\n",
     "    auth_provider=auth_provider)"
    ]
@@ -66,8 +66,8 @@
     }
    ],
    "source": [
-    "auth_provider = PlainTextAuthProvider(username='cassandra', password='cassandra')\n",
-    "cluster = Cluster(contact_points=['138.68.253.133'], port=9042, time = False,\n",
+    "auth_provider = PlainTextAuthProvider(username='xxxx', password='xxxx')\n",
+    "cluster = Cluster(contact_points=['server_Ip_address'], port=9042, time = False,\n",
     "    auth_provider=auth_provider)"
    ]
   },
@@ -78,7 +78,7 @@
    "outputs": [
     {
      "ename": "NoHostAvailable",
-     "evalue": "('Unable to connect to any servers', {'138.68.253.133': OperationTimedOut('errors=None, last_host=None',)})",
+     "evalue": "('Unable to connect to any servers', {'Server_Ip_address': OperationTimedOut('errors=None, last_host=None',)})",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
